--- a/index.htm
+++ b/index.htm
@@ -19,18 +19,18 @@ Tested: Jan 23, 2020; Passed with no problems.
 
 <body>
 <div data-role="page">
-    <div data-role="header"><h1></h1></div>
+    <div data-role="header"><h1>Amir's Application</h1></div>
 
     <div role="main" class="ui-content">
 
 
 <p>
-
+this is some text that would display in the body of the app.
 </p>
 </div>
 
 <div data-role="footer">
-<h4></h4>
+<h4>footer here, copyright etc. 2020</h4>
 </div>
 
 </div>
