--- a/index.htm
+++ b/index.htm
@@ -25,7 +25,7 @@ Tested: Jan 23, 2020; Passed with no problems.
 
 
 <p>
-this is some text that would display in the body of the app.
+this is some text that would display in the body of the app. with http added
 </p>
 </div>
 
