--- a/index.htm
+++ b/index.htm
@@ -12,7 +12,6 @@ Tested: Jan 23, 2020; Passed with no problems.
 <title>Amir's Moving Planner</title>
 <meta name="viewport" content="width-device-width, initial-scale=1">
 <link rel="stylesheet" href="css/jquery.mobile-1.4.5.min.css" />
-<script type="text/javascript" src="http://code.jquery.com/jquery-2.1.3.min.js"></script>
 <script type="text/javascript" src="js/jquery.moblie-1.4.5.min.js">
 </script>
 </head>
@@ -25,7 +24,7 @@ Tested: Jan 23, 2020; Passed with no problems.
 
 
 <p>
-this is some text that would display in the body of the app. with http added
+this is some text that would display in the body of the app. 
 </p>
 </div>
 
