--- a/index.htm
+++ b/index.htm
@@ -9,29 +9,32 @@ School/Term: SIU Carbondale, Spring 2020
 Developed: Jan 23, 2020
 Tested: Jan 23, 2020; Passed with no problems.
 ******************************************************************************-->
-<title>Amir's Moving Planner</title>
-<meta name="viewport" content="width-device-width, initial-scale=1">
+<title>First Mobile Example</title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="css/jquery.mobile-1.4.5.min.css" />
-<script type="text/javascript" src="js/jquery.moblie-1.4.5.min.js">
-</script>
+<script type="text/javascript" src="http://code.jquery.com/jquery-2.1.3.min.js"></script>
+<script type="text/javascript" src="js/jquery.mobile-1.4.5.min.js"></script>
 </head>
 
 <body>
+
 <div data-role="page">
-    <div data-role="header"><h1>Amir's Application</h1></div>
 
-    <div role="main" class="ui-content">
+	<div data-role="header"><h1>Welcome</h1></div>
 
-
-<p>
-this is some text that would display in the body of the app. 
-</p>
-</div>
-
-<div data-role="footer">
-<h4>footer here, copyright etc. 2020</h4>
-</div>
-
+	<div role="main" class="ui-content">
+	<p>
+	Welcome to our first mobile web site. 
+    It's going to be the best site you've ever seen. 
+	Once we get some content. And a business plan. 
+    But the hard part is done!
+	</p>
+	</div>
+	
+	<div data-role="footer">
+	<h4>Copyright Megacorp &copy; 2015</h4>
+	</div>
+	
 </div>
 
 </body>
