--- a/index.htm
+++ b/index.htm
@@ -24,7 +24,7 @@ Tested: Jan 23, 2020; Passed with no problems.
 
 	<div role="main" class="ui-content">
 	<p>
-        My test of live server
+        I don't see gray
 	</p>
 	</div>
 	
