--- a/about.htm
+++ b/about.htm
@@ -18,25 +18,16 @@ Tested: Jan 23, 2020; Passed with no problems.
 
 <body>
 
-<div data-role="page" id="homePage" data-title="Home Page">
+<div data-role="page" id="aboutPage" data-title="About Page"></div>
 
-	<div data-role="header"><h1>Welcome</h1></div>
+	<div data-role="header"><h1>About</h1></div>
 
 	<div role="main" class="ui-content">
 	<p>
-	   Find out more 
-	   <a href="about.htm" data-transition="slidefade">about</a> us.
-	</p>
-	<p>
-		Click <a href="instructions.htm" data-prefetch="true">here</a> for Planning Instructions.
-	</p>
-	<p>
-		Here's your <a href="planner.htm" data-prefetch="true">planner</a>.
+		<a href="index.htm">Home</a> 
 	</p>
 	</div>
-	<p>
-	 <a href="contact.htm">contact us</a>
-	</p>
+	
 	<div data-role="footer">
 	<h4></h4>
 	</div>
