--- a/instructions.htm
+++ b/instructions.htm
@@ -18,25 +18,34 @@ Tested: Jan 23, 2020; Passed with no problems.
 
 <body>
 
-<div data-role="page" id="homePage" data-title="Home Page">
+	<div data-role="page" id="instructionsPage" data-title="Instructions Page"></div>
 
-	<div data-role="header"><h1>Welcome</h1></div>
+	<div data-role="header"><h1>Instructions</h1></div>
 
 	<div role="main" class="ui-content">
 	<p>
-	   Find out more 
-	   <a href="about.htm" data-transition="slidefade">about</a> us.
+		<a href="index.htm">Home</a> 
 	</p>
 	<p>
-		Click <a href="instructions.htm" data-prefetch="true">here</a> for Planning Instructions.
+		<a href="supplies.htm">Moving Supplies</a> 
 	</p>
 	<p>
-		Here's your <a href="planner.htm" data-prefetch="true">planner</a>.
+		<a href="companies.htm">Moving Company</a> 
+	</p>
+	<p>
+		<a href="repairs.htm">Repairs Cleaning</a> 
+	</p>
+	<p>
+		<a href="notifications.htm">Notifications</a> 
+	</p>
+	<p>
+		<a href="utilities.htm">Utilities</a> 
+	</p>
+	<p>
+		<a href="schedule.htm">Schedule</a> 
 	</p>
 	</div>
-	<p>
-	 <a href="contact.htm">contact us</a>
-	</p>
+	
 	<div data-role="footer">
 	<h4></h4>
 	</div>
