--- a/index.htm
+++ b/index.htm
@@ -25,7 +25,7 @@ Tested: Jan 23, 2020; Passed with no problems.
 	<div role="main" class="ui-content">
 	<p>
 	   Find out more 
-	   <a href="about.htm" data-transition="slidefade">about</a> us.
+	   <a href="about.htm" data-transition="flip">about</a> us.
 	</p>
 	<p>
 		Click <a href="instructions.htm" data-prefetch="true">here</a> for Planning Instructions.
