--- a/index.htm
+++ b/index.htm
@@ -25,17 +25,17 @@ Tested: Jan 23, 2020; Passed with no problems.
 	<div role="main" class="ui-content">
 	<p>
 	   Find out more 
-	   <a href="about.htm" data-transition="flip">about</a> us.
+	   <a href="about.htm" data-transition="slidedown">about</a> us.
 	</p>
 	<p>
-		Click <a href="instructions.htm" data-prefetch="true">here</a> for Planning Instructions.
+		Click <a href="instructions.htm" data-prefetch="true" data-transition="slidedown">here</a> for Planning Instructions.
 	</p>
 	<p>
-		Here's your <a href="planner.htm" data-prefetch="true">planner</a>.
+		Here's your <a href="planner.htm" data-prefetch="true" data-transition="slidedown">planner</a>.
 	</p>
 	</div>
 	<p>
-	 <a href="contact.htm">contact us</a>
+	 <a href="contact.htm" data-transition="slidedown">contact us</a>
 	</p>
 	<div data-role="footer">
 	<h4></h4>
