--- a/index.htm
+++ b/index.htm
@@ -9,11 +9,11 @@ School/Term: SIU Carbondale, Spring 2020
 Developed: Jan 23, 2020
 Tested: Jan 23, 2020; Passed with no problems.
 ******************************************************************************-->
-<title>First Mobile Example</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="cs/jquery.mobile-1.4.5.min.css" />
+<title>First Mobile Example</title>
+<link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css" />
 <script type="text/javascript" src="http://code.jquery.com/jquery-2.1.3.min.js"></script>
-<script type="text/javascript" js/src="jquery.mobile-1.4.5.min.js"></script>
+<script type="text/javascript" src="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
 </head>
 
 <body>
@@ -33,10 +33,11 @@ Tested: Jan 23, 2020; Passed with no problems.
 	<p>
 		Here's your <a href="planner.htm" data-prefetch="true" data-transition="slidedown">planner</a>.
 	</p>
-	</div>
 	<p>
-	 <a href="contact.htm" data-transition="slidedown">contact us</a>
-	</p>
+		<a href="contact.htm" data-transition="slidedown">contact us</a>
+   </p>
+	</div>
+
 	<div data-role="footer">
 	<h4></h4>
 	</div>
