--- a/schedule.htm
+++ b/schedule.htm
@@ -9,11 +9,11 @@ School/Term: SIU Carbondale, Spring 2020
 Developed: Jan 23, 2020
 Tested: Jan 23, 2020; Passed with no problems.
 ******************************************************************************-->
-<title>First Mobile Example</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="cs/jquery.mobile-1.4.5.min.css" />
-<script type="text/javascript" src="http://code.jquery.com/jquery-2.1.3.min.js"></script>
-<script type="text/javascript" js/src="jquery.mobile-1.4.5.min.js"></script>
+<title>First Mobile Example</title>
+<link rel="stylesheet" href="https://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css" />
+<script type="text/javascript" src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
+<script type="text/javascript" src="https://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
 </head>
 
 <body>
