--- a/index.htm
+++ b/index.htm
@@ -25,16 +25,16 @@ Tested: Jan 23, 2020; Passed with no problems.
 	<div role="main" class="ui-content">
 	<p>
 	   Find out more 
-	   <a href="about.htm" data-transition="slidedown">about</a> us.
+	   <a href="#about" data-transition="slidedown">about</a> us.
 	</p>
 	<p>
-		Click <a href="instructions.htm" data-prefetch="true" data-transition="slidedown">here</a> for Planning Instructions.
+		Click <a href="#instructions" data-prefetch="true" data-transition="slidedown">here</a> for Planning Instructions.
 	</p>
 	<p>
-		Here's your <a href="planner.htm" data-prefetch="true" data-transition="slidedown">planner</a>.
+		Here's your <a href="#planner" data-prefetch="true" data-transition="slidedown">planner</a>.
 	</p>
 	<p>
-		<a href="contact.htm" data-transition="slidedown">contact us</a>
+		<a href="#contact" data-transition="slidedown">contact us</a>
    </p>
 	</div>
 
