update page links

--- a/instructions.htm
+++ b/instructions.htm
@@ -18,7 +18,7 @@ Tested: Jan 23, 2020; Passed with no problems.
 
 <body>
 
-	<div data-role="page" id="instructionsPage" data-title="Instructions Page"></div>
+	<div data-role="page" id="instructionsPage" data-title="Instructions Page">
 
 	<div data-role="header"><h1>Instructions</h1></div>
 
