--- a/notifications.htm
+++ b/notifications.htm
@@ -18,7 +18,7 @@ Tested: Jan 23, 2020; Passed with no problems.
 
 <body>
 
-	<div data-role="page" id="notificationsPage" data-title="Notifications Page"></div>
+	<div data-role="page" id="notificationsPage" data-title="Notifications Page">
 
 	<div data-role="header"><h1>Notifications</h1></div>
 
