--- a/planner.htm
+++ b/planner.htm
@@ -18,7 +18,7 @@ Tested: Jan 23, 2020; Passed with no problems.
 
 <body>
 
-	<div data-role="page" id="plannerPage" data-title="Planner Page"></div>
+	<div data-role="page" id="plannerPage" data-title="Planner Page">
 
 	<div data-role="header"><h1>Planner</h1></div>
 
