--- a/repairs.htm
+++ b/repairs.htm
@@ -18,7 +18,7 @@ Tested: Jan 23, 2020; Passed with no problems.
 
 <body>
 
-	<div data-role="page" id="repairsPage" data-title="Repairs Page"></div>
+	<div data-role="page" id="repairsPage" data-title="Repairs Page">
 
 	<div data-role="header"><h1>Repairs</h1></div>
 
