--- a/utilities.htm
+++ b/utilities.htm
@@ -18,7 +18,7 @@ Tested: Jan 23, 2020; Passed with no problems.
 
 <body>
 
-	<div data-role="page" id="utilitiesPage" data-title="Utilities Page"></div>
+	<div data-role="page" id="utilitiesPage" data-title="Utilities Page">
 
 	<div data-role="header"><h1>Utilities</h1></div>
 
