--- a/about.htm
+++ b/about.htm
@@ -18,7 +18,7 @@ Tested: Jan 23, 2020; Passed with no problems.
 
 <body>
 
-<div data-role="page" id="aboutPage" data-title="About Page"></div>
+<div data-role="page" id="aboutPage" data-title="About Page">
 
 	<div data-role="header"><h1>About</h1></div>
 
