--- a/add.htm
+++ b/add.htm
@@ -18,7 +18,7 @@ Tested: Jan 23, 2020; Passed with no problems.
 
 <body>
 
-	<div data-role="page" id="addPage" data-title="Add Page"></div>
+	<div data-role="page" id="addPage" data-title="Add Page">
 
 	<div data-role="header"><h1>Add</h1></div>
 
