--- a/companies.htm
+++ b/companies.htm
@@ -18,7 +18,7 @@ Tested: Jan 23, 2020; Passed with no problems.
 
 <body>
 
-	<div data-role="page" id="companiesPage" data-title="Companies Page"></div>
+	<div data-role="page" id="companiesPage" data-title="Companies Page">
 
 	<div data-role="header"><h1>Companies</h1></div>
 
