--- a/display.htm
+++ b/display.htm
@@ -18,7 +18,7 @@ Tested: Jan 23, 2020; Passed with no problems.
 
 <body>
 
-	<div data-role="page" id="displayPage" data-title="Display Page"></div>
+	<div data-role="page" id="displayPage" data-title="Display Page">
 
 	<div data-role="header"><h1>Display</h1></div>
 
