--- a/schedule.htm
+++ b/schedule.htm
@@ -18,7 +18,7 @@ Tested: Jan 23, 2020; Passed with no problems.
 
 <body>
 
-	<div data-role="page" id="schedulePage" data-title="Schedule Page"></div>
+	<div data-role="page" id="schedulePage" data-title="Schedule Page">
 
 	<div data-role="header"><h1>Schedule</h1></div>
 
