--- a/supplies.htm
+++ b/supplies.htm
@@ -18,7 +18,7 @@ Tested: Jan 23, 2020; Passed with no problems.
 
 <body>
 
-	<div data-role="page" id="suppliesPage" data-title="Supplies Page"></div>
+	<div data-role="page" id="suppliesPage" data-title="Supplies Page">
 
 	<div data-role="header"><h1>Supplies</h1></div>
 
