--- a/index.htm
+++ b/index.htm
@@ -7,7 +7,7 @@ Use: Main page of the Moving Planner program
 Author: Amir Sinanovic
 School/Term: SIU Carbondale, Spring 2020
 Developed: Jan 23, 2020
-Tested: Jan 23, 2020; Passed with no problems.
+Tested: Jan 31, 2020; Passed with no problems.
 ******************************************************************************-->
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>First Mobile Example</title>
@@ -25,16 +25,16 @@ Tested: Jan 23, 2020; Passed with no problems.
 	<div role="main" class="ui-content">
 	<p>
 	   Find out more 
-	   <a href="about.htm" data-ajax="false" data-transition="slidedown">about</a> us.
+	   <a href="about.htm" data-ajax="false" data-transition="slide">about</a> us.
 	</p>
 	<p>
-		Click <a href="instructions.htm" data-ajax="false" data-prefetch="true" data-transition="slidedown">here</a> for Planning Instructions.
+		Click <a href="instructions.htm" data-ajax="false" data-prefetch="true" data-transition="slide">here</a> for Planning Instructions.
 	</p>
 	<p>
-		Here's your <a href="planner.htm" data-ajax="false" data-prefetch="true" data-transition="slidedown">planner</a>.
+		Here's your <a href="planner.htm" data-ajax="false" data-prefetch="true" data-transition="slide">planner</a>.
 	</p>
 	<p>
-		<a href="contact.htm" data-ajax="false" data-transition="slidedown">contact us</a>
+		<a href="contact.htm" data-ajax="false" data-transition="slide">contact us</a>
    </p>
 	</div>
 
