--- a/index.htm
+++ b/index.htm
@@ -25,16 +25,16 @@ Tested: Jan 31, 2020; Passed with no problems.
 	<div role="main" class="ui-content">
 	<p>
 	   Find out more 
-	   <a href="about.htm" data-ajax="false" data-transition="slide">about</a> us.
+	   <a href="about.htm" data-ajax="false" data-transition="flip">about</a> us.
 	</p>
 	<p>
-		Click <a href="instructions.htm" data-ajax="false" data-prefetch="true" data-transition="slide">here</a> for Planning Instructions.
+		Click <a href="instructions.htm" data-ajax="false" data-prefetch="true" data-transition="flip">here</a> for Planning Instructions.
 	</p>
 	<p>
-		Here's your <a href="planner.htm" data-ajax="false" data-prefetch="true" data-transition="slide">planner</a>.
+		Here's your <a href="planner.htm" data-ajax="false" data-prefetch="true" data-transition="flip">planner</a>.
 	</p>
 	<p>
-		<a href="contact.htm" data-ajax="false" data-transition="slide">contact us</a>
+		<a href="contact.htm" data-ajax="false" data-transition="flip">contact us</a>
    </p>
 	</div>
 
