--- a/about.htm
+++ b/about.htm
@@ -17,14 +17,21 @@ Tested: Jan 23, 2020; Passed with no problems.
 </head>
 
 <body>
-
+<!-- #4 Page title added -->
 <div data-role="page" id="aboutPage" data-title="About Page">
 
 	<div data-role="header"><h1>About</h1></div>
 
 	<div role="main" class="ui-content">
 	<p>
-		<a href="index.htm">Home</a> 
+		<a href="index.htm" rel="external" >Home</a> 
+	</p>
+	<!-- #8 About content added -->
+	<p>
+		Amir Sinanovic<br>
+		SIU Carbondale<br>
+		IST-422-940 - Mobile Programming<br>
+		02-01-2020
 	</p>
 	</div>
 	
