--- a/index.htm
+++ b/index.htm
@@ -17,7 +17,7 @@ Tested: Jan 31, 2020; Passed with no problems.
 </head>
 
 <body>
-
+ <!-- #4 Page title added -->
 <div data-role="page" id="homePage" data-title="Home Page">
 
 	<div data-role="header"><h1>Welcome</h1></div>
@@ -25,23 +25,31 @@ Tested: Jan 31, 2020; Passed with no problems.
 	<div role="main" class="ui-content">
 	<p>
 	   Find out more 
-	   <a href="about.htm" data-ajax="false" data-transition="flip">about</a> us.
+	   <!-- #5 Page Link added, #7 Transition added -->
+	   <a href="about.htm" rel="external" data-transition="flip">about</a> us.
 	</p>
 	<p>
-		Click <a href="instructions.htm" data-ajax="false" data-prefetch="true" data-transition="flip">here</a> for Planning Instructions.
+		 <!-- #5 Page Link added, #6 Pre-Fetching added, #7 Transition added -->
+		Click <a href="instructions.htm" rel="external" data-prefetch="true" data-transition="flip">here</a> for Planning Instructions.
 	</p>
 	<p>
-		Here's your <a href="planner.htm" data-ajax="false" data-prefetch="true" data-transition="flip">planner</a>.
+		<!-- #5 Page Link added, #6 Pre-Fetching added, #7 Transition added -->
+		Here's your <a href="planner.htm" rel="external" data-prefetch="true" data-transition="flip">planner</a>.
 	</p>
 	<p>
-		<a href="contact.htm" data-ajax="false" data-transition="flip">contact us</a>
+		<!-- #5 Page Link added, #7 Transition added -->
+		<a href="contact.htm" rel="external" data-transition="flip">contact us</a>
+   </p>
+   <p>
+	   Visit us at 
+	   <!-- #9 URL link added -->
+	   <a href="https://www.siu.edu">SIUC</a>
    </p>
 	</div>
 
 	<div data-role="footer">
 	<h4></h4>
 	</div>
-	
 </div>
 
 </body>
