--- a/instructions.htm
+++ b/instructions.htm
@@ -24,25 +24,25 @@ Tested: Jan 23, 2020; Passed with no problems.
 
 	<div role="main" class="ui-content">
 	<p>
-		<a href="index.htm">Home</a> 
+		<a href="index.htm" rel="external">Home</a> 
 	</p>
 	<p>
-		<a href="supplies.htm">Moving Supplies</a> 
+		<a href="supplies.htm" rel="external">Moving Supplies</a> 
 	</p>
 	<p>
-		<a href="companies.htm">Moving Company</a> 
+		<a href="companies.htm" rel="external">Moving Company</a> 
 	</p>
 	<p>
-		<a href="repairs.htm">Repairs Cleaning</a> 
+		<a href="repairs.htm" rel="external">Repairs Cleaning</a> 
 	</p>
 	<p>
-		<a href="notifications.htm">Notifications</a> 
+		<a href="notifications.htm" rel="external">Notifications</a> 
 	</p>
 	<p>
-		<a href="utilities.htm">Utilities</a> 
+		<a href="utilities.htm" rel="external">Utilities</a> 
 	</p>
 	<p>
-		<a href="schedule.htm">Schedule</a> 
+		<a href="schedule.htm" rel="external">Schedule</a> 
 	</p>
 	</div>
 	
