--- a/planner.htm
+++ b/planner.htm
@@ -24,13 +24,13 @@ Tested: Jan 23, 2020; Passed with no problems.
 
 	<div role="main" class="ui-content">
 	<p>
-		<a href="index.htm">Home</a> 
+		<a href="index.htm" rel="external">Home</a> 
 	</p>
 	<p>
-		<a href="display.htm" data-prefetch="true">Display Items</a> 
+		<a href="display.htm" rel="external" data-prefetch="true">Display Items</a> 
 	</p>
 	<p>
-		<a href="add.htm">Add Items</a> 
+		<a href="add.htm" rel="external">Add Items</a> 
 	</p>
 	</div>
 	
