--- a/index.htm
+++ b/index.htm
@@ -20,7 +20,7 @@ Tested: Jan 31, 2020; Passed with no problems.
  <!-- #4 Page title added -->
 <div data-role="page" id="homePage" data-title="Home Page">
 
-	<div data-role="header"><h1>Welcome</h1></div>
+	<div data-role="header"><h1>Home</h1></div>
 
 	<div role="main" class="ui-content">
 	<p>
@@ -48,6 +48,14 @@ Tested: Jan 31, 2020; Passed with no problems.
 	</div>
 
 	<div data-role="footer">
+		<div data-role="navbar">
+			<ul>
+				<li><a href="about.htm">About</a></li>
+				<li><a href="instructions.htm">Planning Instructions</a></li>
+				<li><a href="planner.htm">Planner</a></li>
+				<li><a href="contact.htm">Contact</a></li>
+			</ul>
+		</div>
 	<h4></h4>
 	</div>
 </div>
