--- a/index.htm
+++ b/index.htm
@@ -20,7 +20,8 @@ Tested: Jan 31, 2020; Passed with no problems.
  <!-- #4 Page title added -->
 <div data-role="page" id="homePage" data-title="Home Page">
 
-	<div data-role="header"><h1>Home</h1></div>
+	<div data-role="header">
+		<h1>Home</h1></div>
 
 	<div role="main" class="ui-content">
    <p>
@@ -34,13 +35,13 @@ Tested: Jan 31, 2020; Passed with no problems.
 		<div data-role="navbar">
 			<ul>
 				<!-- #5 Page Link added, #7 Transition added -->
-				<li><a href="about.htm" data-transition="flip">About</a></li>
+				<li><a href="about.htm" data-transition="slide">About</a></li>
 				<!-- #5 Page Link added, #6 Pre-Fetching added, #7 Transition added -->
-				<li><a href="instructions.htm" data-prefetch="true" data-transition="flip">Planning Instructions</a></li>
+				<li><a href="instructions.htm" data-prefetch="true" data-transition="slide">Planning Instructions</a></li>
 				<!-- #5 Page Link added, #6 Pre-Fetching added, #7 Transition added -->
-				<li><a href="planner.htm" data-prefetch="true" data-transition="flip">Planner</a></li>
+				<li><a href="planner.htm" data-prefetch="true" data-transition="slide">Planner</a></li>
 				<!-- #5 Page Link added, #7 Transition added -->
-				<li><a href="contact.htm" data-transition="flip">Contact</a></li>
+				<li><a href="contact.htm" data-transition="slide">Contact</a></li>
 			</ul>
 		</div>
 	<h4></h4>
