--- a/about.htm
+++ b/about.htm
@@ -20,12 +20,12 @@ Tested: Jan 23, 2020; Passed with no problems.
 <!-- #4 Page title added -->
 <div data-role="page" id="aboutPage" data-title="About Page">
 
-	<div data-role="header"><h1>About</h1></div>
+	<div data-role="header">
+		<a href="index.htm" data-icon="home" data-transition="slide" data-direction="reverse">Home</a>
+		<h1>About</h1></div>
 
 	<div role="main" class="ui-content">
-	<p>
-		<a href="index.htm" rel="external" >Home</a> 
-	</p>
+
 	<!-- #8 About content added -->
 	<p>
 		Amir Sinanovic<br>
