--- a/notifications.htm
+++ b/notifications.htm
@@ -20,7 +20,9 @@ Tested: Jan 23, 2020; Passed with no problems.
 
 	<div data-role="page" id="notificationsPage" data-title="Notifications Page">
 
-	<div data-role="header"><h1>Notifications</h1></div>
+	<div data-role="header">
+		<a href="index.htm" data-icon="home" data-transition="flip" data-direction="reverse">Home</a>
+		<h1>Notifications</h1></div>
 
 	<div role="main" class="ui-content">
 	<p>
