--- a/utilities.htm
+++ b/utilities.htm
@@ -20,7 +20,9 @@ Tested: Jan 23, 2020; Passed with no problems.
 
 	<div data-role="page" id="utilitiesPage" data-title="Utilities Page">
 
-	<div data-role="header"><h1>Utilities</h1></div>
+	<div data-role="header">
+		<a href="index.htm" data-icon="home" data-transition="flip" data-direction="reverse">Home</a>
+		<h1>Utilities</h1></div>
 
 	<div role="main" class="ui-content">
 	<p>
@@ -29,6 +31,19 @@ Tested: Jan 23, 2020; Passed with no problems.
 	</div>
 	
 	<div data-role="footer">
+		<div data-role="navbar">
+			<ul>
+				<!-- #5 Page Link added, #7 Transition added -->
+				<li><a href="supplies.htm" data-transition="fade">Moving Supplies</a></li>
+				<!-- #5 Page Link added, #6 Pre-Fetching added, #7 Transition added -->
+				<li><a href="companies.htm" data-prefetch="true" data-transition="fade">Moving Company</a></li>
+				<!-- #5 Page Link added, #6 Pre-Fetching added, #7 Transition added -->
+				<li><a href="repairs.htm" data-prefetch="true" data-transition="fade">Repairs Cleaning</a></li>
+				<!-- #5 Page Link added, #7 Transition added -->
+				<li><a href="utilities.htm" class="ui-btn-active">Utilities</a></li>
+				<li><a href="schedule.htm" data-transition="fade">Schedule</a></li>
+			</ul>
+		</div>
 	<h4></h4>
 	</div>
 	
