--- a/instructions.htm
+++ b/instructions.htm
@@ -33,14 +33,8 @@ Tested: Jan 23, 2020; Passed with no problems.
 		<div data-role="navbar">
 			<ul>
 				<!-- #5 Page Link added, #7 Transition added -->
-				<li><a href="supplies.htm" data-transition="fade">Moving Supplies</a></li>
-				<!-- #5 Page Link added, #6 Pre-Fetching added, #7 Transition added -->
-				<li><a href="companies.htm" data-prefetch="true" data-transition="fade">Moving Company</a></li>
-				<!-- #5 Page Link added, #6 Pre-Fetching added, #7 Transition added -->
-				<li><a href="repairs.htm" data-prefetch="true" data-transition="fade">Repairs Cleaning</a></li>
-				<!-- #5 Page Link added, #7 Transition added -->
-				<li><a href="utilities.htm" data-transition="fade">Utilities</a></li>
-				<li><a href="schedule.htm" data-transition="fade">Schedule</a></li>
+				<li><a href="supplies.htm" class="ui-btn-right" data-transition="fade">Moving Supplies</a></li>
+
 			</ul>
 		</div>
 	<h4></h4>
