--- a/instructions.htm
+++ b/instructions.htm
@@ -27,20 +27,27 @@ Tested: Jan 23, 2020; Passed with no problems.
 	</div>
 
 	<div role="main" class="ui-content">
+		<p>
+			Amir
+		Sinanovic
+	a 
+ti 
+si
+		</p>
 	</div>
 	
 	<div data-role="footer">
 		<div data-role="navbar">
 			<ul>
 				<!-- #5 Page Link added, #7 Transition added -->
-				<li><a href="supplies.htm" data-transition="fade" text-wrap="true">Moving Supplies</a></li>
+				<li><a href="supplies.htm" data-transition="fade" data-mini="true">Moving Supplies</a></li>
 				<!-- #5 Page Link added, #6 Pre-Fetching added, #7 Transition added -->
-				<li><a href="companies.htm" data-prefetch="true" data-transition="fade" text-wrap="true">Moving Company</a></li>
+				<li><a href="companies.htm" data-prefetch="true" data-transition="fade" data-mini="true">Moving Company</a></li>
 				<!-- #5 Page Link added, #6 Pre-Fetching added, #7 Transition added -->
-				<li><a href="repairs.htm" data-prefetch="true" data-transition="fade" text-wrap="true">Repairs Cleaning</a></li>
+				<li><a href="repairs.htm" data-prefetch="true" data-transition="fade" data-mini="true">Repairs Cleaning</a></li>
 				<!-- #5 Page Link added, #7 Transition added -->
-				<li><a href="utilities.htm" data-transition="fade" text-wrap="true">Utilities</a></li>
-				<li><a href="schedule.htm" data-transition="fade" text-wrap="true">Schedule</a></li>
+				<li><a href="utilities.htm" data-transition="fade" data-mini="true">Utilities</a></li>
+				<li><a href="schedule.htm" data-transition="fade" data-mini="true">Schedule</a></li>
 			</ul>
 		</div>
 	<h4></h4>
