three and three

--- a/instructions.htm
+++ b/instructions.htm
@@ -23,7 +23,16 @@ Tested: Jan 23, 2020; Passed with no problems.
 	<div data-role="header">
 		<a href="index.htm" data-icon="home" data-transition="flip" data-direction="reverse">Home</a>
 		<h1>Planning Instructions</h1>
-		<a href="notifications.htm" data-icon="info">Notifications</a> 
+		<div data-role="navbar">
+			<ul>
+				<!-- #5 Page Link added, #7 Transition added -->
+				<li><a href="supplies.htm" data-transition="fade" data-mini="true">Moving Supplies</a></li>
+				<!-- #5 Page Link added, #6 Pre-Fetching added, #7 Transition added -->
+				<li><a href="companies.htm" data-prefetch="true" data-transition="fade" data-mini="true">Moving Company</a></li>
+				<!-- #5 Page Link added, #6 Pre-Fetching added, #7 Transition added -->
+				<li><a href="repairs.htm" data-prefetch="true" data-transition="fade" data-mini="true">Repairs Cleaning</a></li>
+			</ul>
+		</div>
 	</div>
 
 	<div role="main" class="ui-content">
@@ -40,12 +49,7 @@ si
 		<div data-role="navbar">
 			<ul>
 				<!-- #5 Page Link added, #7 Transition added -->
-				<li><a href="supplies.htm" data-transition="fade" data-mini="true">Moving Supplies</a></li>
-				<!-- #5 Page Link added, #6 Pre-Fetching added, #7 Transition added -->
-				<li><a href="companies.htm" data-prefetch="true" data-transition="fade" data-mini="true">Moving Company</a></li>
-				<!-- #5 Page Link added, #6 Pre-Fetching added, #7 Transition added -->
-				<li><a href="repairs.htm" data-prefetch="true" data-transition="fade" data-mini="true">Repairs Cleaning</a></li>
-				<!-- #5 Page Link added, #7 Transition added -->
+				<li><a href="notifications.htm" data-transition="fade">Notifications</a></li>
 				<li><a href="utilities.htm" data-transition="fade" data-mini="true">Utilities</a></li>
 				<li><a href="schedule.htm" data-transition="fade" data-mini="true">Schedule</a></li>
 			</ul>
