--- a/index.htm
+++ b/index.htm
@@ -31,7 +31,7 @@ Tested: Jan 31, 2020; Passed with no problems.
    </p>
 	</div>
 
-	<div data-role="footer">
+	<div data-role="footer" data-position="fixed" data-id="footernav" data-theme="a">
 		<div data-role="navbar">
 			<ul>
 				<!-- #5 Page Link added, #7 Transition added -->
