--- a/instructions.htm
+++ b/instructions.htm
@@ -45,7 +45,7 @@ si
 		</p>
 	</div>
 	
-	<div data-role="footer">
+	<div data-role="footer" data-position="fixed" data-id="footernav" data-theme="a">
 		<div data-role="navbar">
 			<ul>
 				<!-- #5 Page Link added, #7 Transition added -->
