--- a/about.htm
+++ b/about.htm
@@ -35,8 +35,8 @@ Tested: Jan 23, 2020; Passed with no problems.
 	</p>
 	</div>
 	
-	<div data-role="footer">
-	<h4></h4>
+	<div data-role="footer" data-position="fixed" data-id="footernav" data-theme="a">
+	<h4>Amir's Moving Planner &copy; 2020</h4>
 	</div>
 	
 </div>
