--- a/index.htm
+++ b/index.htm
@@ -44,7 +44,7 @@ Tested: Jan 31, 2020; Passed with no problems.
 				<li><a href="contact.htm" data-transition="slide">Contact</a></li>
 			</ul>
 		</div>
-	<h4></h4>
+	<h4>Amir's Moving Planner &copy; 2020</h4>
 	</div>
 </div>
 
