--- a/instructions.htm
+++ b/instructions.htm
@@ -36,13 +36,6 @@ Tested: Jan 23, 2020; Passed with no problems.
 	</div>
 
 	<div role="main" class="ui-content">
-		<p>
-			Amir
-		Sinanovic
-	a 
-ti 
-si
-		</p>
 	</div>
 	
 	<div data-role="footer" data-position="fixed" data-id="footernav" data-theme="a">
@@ -54,7 +47,7 @@ si
 				<li><a href="schedule.htm" data-transition="fade" data-mini="true">Schedule</a></li>
 			</ul>
 		</div>
-	<h4></h4>
+	<h4>Amir's Moving Planner &copy; 2020</h4>
 	</div>
 	
 </div>
