--- a/add.htm
+++ b/add.htm
@@ -25,13 +25,10 @@ Tested: Jan 23, 2020; Passed with no problems.
 		<h1>Add</h1></div>
 
 	<div role="main" class="ui-content">
-	<p>
-		<a href="index.htm" rel="external">Home</a> 
-	</p>
 	</div>
 	
-	<div data-role="footer">
-	<h4></h4>
+	<div data-role="footer" data-position="fixed" data-id="footernav" data-theme="a">
+	<h4>Amir's Moving Planner &copy; 2020</h4>
 	</div>
 	
 </div>
