--- a/planner.htm
+++ b/planner.htm
@@ -25,19 +25,17 @@ Tested: Jan 23, 2020; Passed with no problems.
 		<h1>Planner</h1></div>
 
 	<div role="main" class="ui-content">
-	<p>
-		<a href="index.htm" rel="external">Home</a> 
-	</p>
-	<p>
-		<a href="display.htm" rel="external" data-prefetch="true">Display Items</a> 
-	</p>
-	<p>
-		<a href="add.htm" rel="external">Add Items</a> 
-	</p>
 	</div>
 	
-	<div data-role="footer">
-	<h4></h4>
+	<div data-role="footer" data-position="fixed" data-id="footernav" data-theme="a">
+		<div data-role="navbar">
+			<ul>
+				<!-- #5 Page Link added, #7 Transition added -->
+				<li><a href="display.htm" data-transition="fade">Display Items</a></li>
+				<li><a href="add.htm" data-transition="fade" data-mini="true">Add Items</a></li>
+			</ul>
+		</div>
+	<h4>Amir's Moving Planner &copy; 2020</h4>
 	</div>
 	
 </div>
