--- a/utilities.htm
+++ b/utilities.htm
@@ -25,12 +25,9 @@ Tested: Jan 23, 2020; Passed with no problems.
 		<h1>Utilities</h1></div>
 
 	<div role="main" class="ui-content">
-	<p>
-		<a href="index.htm" rel="external">Home</a> 
-	</p>
 	</div>
 	
-	<div data-role="footer">
+	<div data-role="footer" data-position="fixed" data-id="footernav" data-theme="a">
 		<div data-role="navbar">
 			<ul>
 				<!-- #5 Page Link added, #7 Transition added -->
@@ -44,7 +41,7 @@ Tested: Jan 23, 2020; Passed with no problems.
 				<li><a href="schedule.htm" data-transition="fade">Schedule</a></li>
 			</ul>
 		</div>
-	<h4></h4>
+	<h4>Amir's Moving Planner &copy; 2020</h4>
 	</div>
 	
 </div>
