--- a/add.htm
+++ b/add.htm
@@ -21,7 +21,7 @@ Tested: Jan 23, 2020; Passed with no problems.
 	<div data-role="page" id="addPage" data-title="Add Page">
 
 	<div data-role="header">
-		<a href="index.htm" data-icon="home" data-transition="flip" data-direction="reverse">Home</a>
+		<a href="index.htm" data-icon="home" data-transition="slide" data-direction="reverse">Home</a>
 		<h1>Add</h1></div>
 
 	<div role="main" class="ui-content">
