--- a/planner.htm
+++ b/planner.htm
@@ -21,7 +21,7 @@ Tested: Jan 23, 2020; Passed with no problems.
 	<div data-role="page" id="plannerPage" data-title="Planner Page">
 
 	<div data-role="header">
-		<a href="index.htm" data-icon="home" data-transition="flip" data-direction="reverse">Home</a>
+		<a href="index.htm" data-icon="home" data-transition="slide" data-direction="reverse">Home</a>
 		<h1>Planner</h1></div>
 
 	<div role="main" class="ui-content">
