--- a/utilities.htm
+++ b/utilities.htm
@@ -26,7 +26,7 @@ Tested: Jan 23, 2020; Passed with no problems.
 
 	<div role="main" class="ui-content">
 	</div>
-	
+
 	<div data-role="footer" data-position="fixed" data-id="footernav" data-theme="a">
 		<div data-role="navbar">
 			<ul>
@@ -34,7 +34,7 @@ Tested: Jan 23, 2020; Passed with no problems.
 				<li><a href="supplies.htm" data-transition="fade">Moving Supplies</a></li>
 				<!-- #5 Page Link added, #6 Pre-Fetching added, #7 Transition added -->
 				<li><a href="companies.htm" data-prefetch="true" data-transition="fade">Moving Company</a></li>
-				<!-- #5 Page Link added, #6 Pre-Fetching added, #7 Transition added -->
+				<!-- #5 Page Link added, #6 Pre-Fetching added, #7 Transition added -->l
 				<li><a href="repairs.htm" data-prefetch="true" data-transition="fade">Repairs Cleaning</a></li>
 				<!-- #5 Page Link added, #7 Transition added -->
 				<li><a href="utilities.htm" class="ui-btn-active">Utilities</a></li>
