--- a/display.htm
+++ b/display.htm
@@ -21,16 +21,21 @@ Tested: Jan 23, 2020; Passed with no problems.
 	<div data-role="page" id="displayPage" data-title="Display Page">
 
 	<div data-role="header">
-		<a href="index.htm" data-icon="home" data-transition="slide" data-direction="reverse">Home</a>
+		
 		<h1>Display</h1></div>
 
 	<div role="main" class="ui-content">
 	</div>
 	
 	<div data-role="footer" data-position="fixed" data-id="footernav" data-theme="a">
-	<h4>Amir's Moving Planner &copy; 2020</h4>
-	</div>
-	
+		<div data-role="navbar">
+			<ul>
+				<li><a href="" data-rel="back" data-icon="back" data-transition="slide" data-direction="reverse">Back</a></li>
+				<li><a href="index.htm" data-icon="home" data-transition="slide" data-direction="reverse">Home</a></li>
+			</ul>
+		</div>
+		<h4>Amir's Moving Planner &copy; 2020</h4>
+	</div>	
 </div>
 
 </body>
