--- a/index.htm
+++ b/index.htm
@@ -41,9 +41,9 @@ Tested: Jan 31, 2020; Passed with no problems.
 		<div data-role="navbar">
 			<ul>
 				<!-- #5 Page Link added, #6 Pre-Fetching added, #7 Transition added -->
-				<li><a href="instructions.htm" data-prefetch="true" data-transition="slide">Planning Instructions</a></li>
+				<li><a href="instructions.htm" data-icon="carat-r" data-prefetch="true" data-transition="slide">Planning Instructions</a></li>
 				<!-- #5 Page Link added, #6 Pre-Fetching added, #7 Transition added -->
-				<li><a href="planner.htm" data-prefetch="true" data-transition="slide">Planner</a></li>
+				<li><a href="planner.htm" data-icon="bullets" data-prefetch="true" data-transition="slide">Planner</a></li>
 			</ul>
 		</div>
 	<h4>Amir's Moving Planner &copy; 2020</h4>
