--- a/schedule.htm
+++ b/schedule.htm
@@ -21,7 +21,6 @@ Tested: Jan 23, 2020; Passed with no problems.
 	<div data-role="page" id="schedulePage" data-title="Schedule Page">
 
 	<div data-role="header">
-		<a href="index.htm" data-icon="home" data-transition="slide" data-direction="reverse">Home</a>
 		<h1>Schedule</h1></div>
 
 	<div role="main" class="ui-content">
@@ -30,15 +29,8 @@ Tested: Jan 23, 2020; Passed with no problems.
 	<div data-role="footer" data-position="fixed" data-id="footernav" data-theme="a">
 		<div data-role="navbar">
 			<ul>
-				<!-- #5 Page Link added, #7 Transition added -->
-				<li><a href="supplies.htm" data-transition="fade">Moving Supplies</a></li>
-				<!-- #5 Page Link added, #6 Pre-Fetching added, #7 Transition added -->
-				<li><a href="companies.htm" data-prefetch="true" data-transition="fade">Moving Company</a></li>
-				<!-- #5 Page Link added, #6 Pre-Fetching added, #7 Transition added -->
-				<li><a href="repairs.htm" data-prefetch="true" data-transition="fade">Repairs Cleaning</a></li>
-				<!-- #5 Page Link added, #7 Transition added -->
-				<li><a href="utilities.htm" data-transition="fade">Utilities</a></li>
-				<li><a href="schedule.htm" class="ui-btn-active">Schedule</a></li>
+				<li><a href="" data-rel="back" data-icon="back" data-transition="slide" data-direction="reverse">Back</a></li>
+				<li><a href="index.htm" data-icon="home" data-transition="slide" data-direction="reverse">Home</a></li>
 			</ul>
 		</div>
 	<h4>Amir's Moving Planner &copy; 2020</h4>
