--- a/supplies.htm
+++ b/supplies.htm
@@ -30,15 +30,8 @@ Tested: Jan 23, 2020; Passed with no problems.
 	<div data-role="footer" data-position="fixed" data-id="footernav" data-theme="a">
 		<div data-role="navbar">
 			<ul>
-				<!-- #5 Page Link added, #7 Transition added -->
-				<li><a href="supplies.htm" class="ui-btn-active">Moving Supplies</a></li>
-				<!-- #5 Page Link added, #6 Pre-Fetching added, #7 Transition added -->
-				<li><a href="companies.htm" data-prefetch="true" data-transition="fade">Moving Company</a></li>
-				<!-- #5 Page Link added, #6 Pre-Fetching added, #7 Transition added -->
-				<li><a href="repairs.htm" data-prefetch="true" data-transition="fade">Repairs Cleaning</a></li>
-				<!-- #5 Page Link added, #7 Transition added -->
-				<li><a href="utilities.htm" data-transition="fade">Utilities</a></li>
-				<li><a href="schedule.htm" data-transition="fade">Schedule</a></li>
+				<li><a href="" data-rel="back" data-icon="back" data-transition="slide" data-direction="reverse">Back</a></li>
+				<li><a href="companies.htm" data-icon="user" data-prefetch="true" data-transition="slide">Moving Company</a></li>
 			</ul>
 		</div>
 	<h4>Amir's Moving Planner &copy; 2020</h4>
