--- a/instructions.htm
+++ b/instructions.htm
@@ -32,15 +32,15 @@ Tested: Jan 23, 2020; Passed with no problems.
 		<div data-role="navbar">
 			<ul>
 				<!-- #5 Page Link added, #7 Transition added -->
-				<li><a href="supplies.htm" data-icon="grid" data-transition="fade" data-mini="true">Moving Supplies</a></li>
+				<li><a href="supplies.htm" data-icon="grid" data-transition="slade" data-mini="true">Moving Supplies</a></li>
 				<!-- #5 Page Link added, #6 Pre-Fetching added, #7 Transition added -->
-				<li><a href="companies.htm" data-icon="user"data-prefetch="true" data-transition="fade" data-mini="true">Moving Company</a></li>
+				<li><a href="companies.htm" data-icon="user"data-prefetch="true" data-transition="slide" data-mini="true">Moving Company</a></li>
 				<!-- #5 Page Link added, #6 Pre-Fetching added, #7 Transition added -->
-				<li><a href="repairs.htm" data-icon="heart" data-prefetch="true" data-transition="fade" data-mini="true">Repairs Cleaning</a></li>
+				<li><a href="repairs.htm" data-icon="heart" data-prefetch="true" data-transition="slide" data-mini="true">Repairs Cleaning</a></li>
 				<!-- #5 Page Link added, #7 Transition added -->
-				<li><a href="notifications.htm" data-icon="alert" data-transition="fade">Notifications</a></li>
-				<li><a href="utilities.htm" data-icon="arrow-u-r" data-transition="fade" data-mini="true">Utilities</a></li>
-				<li><a href="schedule.htm" data-icon="calendar" data-transition="fade" data-mini="true">Schedule</a></li>
+				<li><a href="notifications.htm" data-icon="alert" data-transition="slide">Notifications</a></li>
+				<li><a href="utilities.htm" data-icon="arrow-u-r" data-transition="slide" data-mini="true">Utilities</a></li>
+				<li><a href="schedule.htm" data-icon="calendar" data-transition="slide" data-mini="true">Schedule</a></li>
 			</ul>
 		</div>
 	<h4>Amir's Moving Planner &copy; 2020</h4>
