--- a/utilities.htm
+++ b/utilities.htm
@@ -31,7 +31,7 @@ Tested: Jan 23, 2020; Passed with no problems.
 		<div data-role="navbar">
 			<ul>
 				<li><a href="" data-rel="back" data-icon="back" data-transition="slide" data-direction="reverse">Back</a></li>
-				<li><a href="schedule.htm" data-icon="calendar" data-transition="fade">Schedule</a></li>
+				<li><a href="schedule.htm" data-icon="calendar" data-transition="slide">Schedule</a></li>
 			</ul>
 		</div>
 	<h4>Amir's Moving Planner &copy; 2020</h4>
