--- a/companies.htm
+++ b/companies.htm
@@ -32,7 +32,7 @@ Tested: Jan 23, 2020; Passed with no problems.
 			<ul>
 				<li><a href="" data-rel="back" data-icon="back" data-transition="slide" data-direction="reverse">Back</a></li>
 				<!-- #5 Page Link added, #6 Pre-Fetching added, #7 Transition added -->
-				<li><a href="repairs.htm" data-icon="heart" data-prefetch="true" data-transition="fade">Repairs Cleaning</a></li>
+				<li><a href="repairs.htm" data-icon="heart" data-prefetch="true" data-transition="slide">Repairs Cleaning</a></li>
 			</ul>
 		</div>
 	<h4>Amir's Moving Planner &copy; 2020</h4>
