--- a/index.htm
+++ b/index.htm
@@ -31,7 +31,28 @@ Tested: Jan 31, 2020; Passed with no problems.
 
 	<div role="main" class="ui-content">
    <p>
-	   Visit us at 
+	Welcome to Plan-A-Move!
+	<br>
+    </br>
+	We make moving fun and easy. At Plan-A-Move we offer information, instructions, contacts, schedule, planner and more, all to make your next move as easy and smooth as possible.
+	<br>
+	</br> 
+	If at any time of the moving process you have questions for us, please don’t hesitate to reach out by clicking on the “contact” icon on top left of this page.
+	To learn more about us, please click on the “about” icon on the top right. 
+	<br>
+	</br>
+	Let’s get started, 
+	<br>
+	</br>
+	Please click on the “Planning Instructions” icon on the bottom left. From this menu, you will have access to a list of moving supplies, moving companies,
+	repairs cleaning to consider before the move, notifications page with a list of contacts that may need to be notified of the move,
+	Utilities icon will take you to a list of utility companies that will need to be notified as well as a schedule to keep you organized.
+	From the main menu, if you click on the “Planner Page” icon, you will have access to an “Add Item” and “Display Items” page.
+	Here you will add and view planning items as we get you moving. 
+	<br>
+	</br>
+	
+	   Come say Hello at 
 	   <!-- #9 URL link added -->
 	   <a href="https://www.siu.edu">SIUC</a>
    </p>
