--- a/planner.htm
+++ b/planner.htm
@@ -31,8 +31,8 @@ Tested: Jan 23, 2020; Passed with no problems.
 		<div data-role="navbar">
 			<ul>
 				<!-- #5 Page Link added, #7 Transition added -->
-				<li><a href="display.htm" data-icon="bars" data-transition="fade">Display Items</a></li>
-				<li><a href="add.htm" data-icon="plus" data-transition="fade" data-mini="true">Add Items</a></li>
+				<li><a href="display.htm" data-icon="bars" data-transition="slide">Display Items</a></li>
+				<li><a href="add.htm" data-icon="plus" data-transition="slide" data-mini="true">Add Items</a></li>
 			</ul>
 		</div>
 	<h4>Amir's Moving Planner &copy; 2020</h4>
