--- a/repairs.htm
+++ b/repairs.htm
@@ -31,8 +31,7 @@ Tested: Jan 23, 2020; Passed with no problems.
 		<div data-role="navbar">
 			<ul>
 				<li><a href="" data-rel="back" data-icon="back" data-transition="slide" data-direction="reverse">Back</a></li>
-				<!-- #5 Page Link added, #7 Transition added -->
-				<li><a href="utilities.htm" data-icon="arrow-u-r" data-transition="fade">Utilities</a></li>
+				<li><a href="notifications.htm" data-icon="alert" data-transition="slide">Notifications</a></li>
 			</ul>
 		</div>
 	<h4>Amir's Moving Planner &copy; 2020</h4>
