--- a/notifications.htm
+++ b/notifications.htm
@@ -21,6 +21,7 @@ Tested: Feb 8, 2020; Passed with no problems.
 	<div data-role="page" id="notificationsPage" data-title="Notifications Page">
 
 	<div data-role="header">
+		<a href="index.htm" data-icon="home" data-transition="slide" data-direction="reverse">Home</a>
 		<h1>Notifications</h1></div>
 
 	<div role="main" class="ui-content">
