--- a/index.htm
+++ b/index.htm
@@ -10,7 +10,7 @@ Developed: Jan 23, 2020
 Tested: Feb 8, 2020; Passed with no problems.
 ******************************************************************************-->
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>First Mobile Example</title>
+<title>Home</title>
 <link rel="stylesheet" href="https://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css" />
 <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
 <script type="text/javascript" src="https://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
@@ -22,10 +22,10 @@ Tested: Feb 8, 2020; Passed with no problems.
 
 	<div data-role="header">
 		<!-- #5 Page Link added, #7 Transition added -->
-		<a href="contact.htm" data-icon="phone" data-transition="slide">Contact</a>
+		<a href="contact.htm" rel="external" data-icon="phone" data-transition="slide">Contact</a>
 		<h1>Home</h1>
 		<!-- #5 Page Link added, #7 Transition added -->
-		<a href="about.htm" data-icon="info" data-transition="slide">About</a>
+		<a href="about.htm" rel="external" data-icon="info" data-transition="slide">About</a>
 	</div>
 
 
@@ -62,9 +62,9 @@ Tested: Feb 8, 2020; Passed with no problems.
 		<div data-role="navbar">
 			<ul>
 				<!-- #5 Page Link added, #6 Pre-Fetching added, #7 Transition added -->
-				<li><a href="instructions.htm" data-icon="carat-r" data-prefetch="true" data-transition="slide">Planning Instructions</a></li>
+				<li><a href="instructions.htm" rel="external" data-icon="carat-r" data-prefetch="true" data-transition="slide">Planning Instructions</a></li>
 				<!-- #5 Page Link added, #6 Pre-Fetching added, #7 Transition added -->
-				<li><a href="planner.htm" data-icon="bullets" data-prefetch="true" data-transition="slide">Planner</a></li>
+				<li><a href="planner.htm" rel="external" data-icon="bullets" data-prefetch="true" data-transition="slide">Planner</a></li>
 			</ul>
 		</div>
 	<h4>Amir's Moving Planner &copy; 2020</h4>
