--- a/instructions.htm
+++ b/instructions.htm
@@ -10,7 +10,7 @@ Developed: Jan 23, 2020
 Tested: Feb 8, 2020; Passed with no problems.
 ******************************************************************************-->
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>First Mobile Example</title>
+<title>Instructions</title>
 <link rel="stylesheet" href="https://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css" />
 <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
 <script type="text/javascript" src="https://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
@@ -21,7 +21,7 @@ Tested: Feb 8, 2020; Passed with no problems.
 	<div data-role="page" id="instructionsPage" data-title="Instructions Page">
 
 	<div data-role="header">
-		<a href="index.htm" data-icon="home" data-transition="slide" data-direction="reverse">Home</a>
+		<a href="index.htm" rel="external" data-icon="home" data-transition="slide" data-direction="reverse">Home</a>
 		<h1>Planning Instructions</h1>
 	</div>
 
@@ -32,15 +32,15 @@ Tested: Feb 8, 2020; Passed with no problems.
 		<div data-role="navbar">
 			<ul>
 				<!-- #5 Page Link added, #7 Transition added -->
-				<li><a href="supplies.htm" data-icon="grid" data-transition="slade" data-mini="true">Moving Supplies</a></li>
+				<li><a href="supplies.htm" rel="external" data-icon="grid" data-transition="slade" data-mini="true">Moving Supplies</a></li>
 				<!-- #5 Page Link added, #6 Pre-Fetching added, #7 Transition added -->
-				<li><a href="companies.htm" data-icon="user"data-prefetch="true" data-transition="slide" data-mini="true">Moving Company</a></li>
+				<li><a href="companies.htm" rel="external" data-icon="user"data-prefetch="true" data-transition="slide" data-mini="true">Moving Company</a></li>
 				<!-- #5 Page Link added, #6 Pre-Fetching added, #7 Transition added -->
-				<li><a href="repairs.htm" data-icon="heart" data-prefetch="true" data-transition="slide" data-mini="true">Repairs Cleaning</a></li>
+				<li><a href="repairs.htm" rel="external" data-icon="heart" data-prefetch="true" data-transition="slide" data-mini="true">Repairs Cleaning</a></li>
 				<!-- #5 Page Link added, #7 Transition added -->
-				<li><a href="notifications.htm" data-icon="alert" data-transition="slide">Notifications</a></li>
-				<li><a href="utilities.htm" data-icon="arrow-u-r" data-transition="slide" data-mini="true">Utilities</a></li>
-				<li><a href="schedule.htm" data-icon="calendar" data-transition="slide" data-mini="true">Schedule</a></li>
+				<li><a href="notifications.htm" rel="external" data-icon="alert" data-transition="slide">Notifications</a></li>
+				<li><a href="utilities.htm" rel="external" data-icon="arrow-u-r" data-transition="slide" data-mini="true">Utilities</a></li>
+				<li><a href="schedule.htm" rel="external" data-icon="calendar" data-transition="slide" data-mini="true">Schedule</a></li>
 			</ul>
 		</div>
 	<h4>Amir's Moving Planner &copy; 2020</h4>
