--- a/notifications.htm
+++ b/notifications.htm
@@ -10,7 +10,7 @@ Developed: Jan 23, 2020
 Tested: Feb 8, 2020; Passed with no problems.
 ******************************************************************************-->
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>First Mobile Example</title>
+<title>Notifications</title>
 <link rel="stylesheet" href="https://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css" />
 <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
 <script type="text/javascript" src="https://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
@@ -21,7 +21,7 @@ Tested: Feb 8, 2020; Passed with no problems.
 	<div data-role="page" id="notificationsPage" data-title="Notifications Page">
 
 	<div data-role="header">
-		<a href="index.htm" data-icon="home" data-transition="slide" data-direction="reverse">Home</a>
+		<a href="index.htm" rel="external" data-icon="home" data-transition="slide" data-direction="reverse">Home</a>
 		<h1>Notifications</h1></div>
 
 	<div role="main" class="ui-content">
@@ -30,9 +30,9 @@ Tested: Feb 8, 2020; Passed with no problems.
 	<div data-role="footer" data-position="fixed" data-id="footernav" data-theme="a">
 		<div data-role="navbar">
 			<ul>
-				<li><a href="" data-rel="back" data-icon="back" data-transition="slide" data-direction="reverse">Back</a></li>
+				<li><a href="" data-rel="back" rel="external" data-icon="back" data-transition="slide" data-direction="reverse">Back</a></li>
 				<!-- #5 Page Link added, #7 Transition added -->
-				<li><a href="utilities.htm" data-icon="arrow-u-r" data-transition="slide">Utilities</a></li>
+				<li><a href="utilities.htm" rel="external" data-icon="arrow-u-r" data-transition="slide">Utilities</a></li>
 			</ul>
 		</div>
 	<h4>Amir's Moving Planner &copy; 2020</h4>
