--- a/planner.htm
+++ b/planner.htm
@@ -10,7 +10,7 @@ Developed: Jan 23, 2020
 Tested: Feb 8, 2020; Passed with no problems.
 ******************************************************************************-->
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>First Mobile Example</title>
+<title>Planner</title>
 <link rel="stylesheet" href="https://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css" />
 <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
 <script type="text/javascript" src="https://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
@@ -21,7 +21,7 @@ Tested: Feb 8, 2020; Passed with no problems.
 	<div data-role="page" id="plannerPage" data-title="Planner Page">
 
 	<div data-role="header">
-		<a href="index.htm" data-icon="home" data-transition="slide" data-direction="reverse">Home</a>
+		<a href="index.htm" rel="external" data-icon="home" data-transition="slide" data-direction="reverse">Home</a>
 		<h1>Planner</h1></div>
 
 	<div role="main" class="ui-content">
@@ -31,8 +31,8 @@ Tested: Feb 8, 2020; Passed with no problems.
 		<div data-role="navbar">
 			<ul>
 				<!-- #5 Page Link added, #7 Transition added -->
-				<li><a href="display.htm" data-icon="bars" data-transition="slide">Display Items</a></li>
-				<li><a href="add.htm" data-icon="plus" data-transition="slide" data-mini="true">Add Items</a></li>
+				<li><a href="display.htm" rel="external" data-icon="bars" data-transition="slide">Display Items</a></li>
+				<li><a href="add.htm" rel="external" data-icon="plus" data-transition="slide" data-mini="true">Add Items</a></li>
 			</ul>
 		</div>
 	<h4>Amir's Moving Planner &copy; 2020</h4>
