--- a/supplies.htm
+++ b/supplies.htm
@@ -25,13 +25,18 @@ Tested: Feb 8, 2020; Passed with no problems.
 		<h1>Supplies</h1></div>
 
 	<div role="main" class="ui-content">
+		<!-- #2 Week 5 Unordered List added -->
 		<ul data-role="listview" data-inset="true">
-			<li data-role="list-divider">Company 1</li>
-			<li>Moving Supply Type</li>
-			<li>Moving Supply Type</li>
-			<li>Moving Supply Type</li>
-			<li data-role="list-divider">Company 2</li>
-			<li>Moving Supply Type</li>
+			<li data-role="list-divider">U-Haul</li>
+			<!-- #4 Week 5 count bubbles added -->
+			<li>Storage <span class="ui-li-count">1</span></li>
+			<li>Truck Rental <span class="ui-li-count">1</span></li>
+			<li>Moving Boxes <span class="ui-li-count">20</span></li>
+			<li data-role="list-divider">Cargo Control</li>
+			<li>Furniture Covers <span class="ui-li-count">10</span></li>
+			<li>Moving Blankets <span class="ui-li-count">15</span></li>
+			<li>Moving Dollies <span class="ui-li-count">1</span></li>
+			<li>Packaging Supplies <span class="ui-li-count">5</span></li>
 			</ul>
 	</div>
 	
