--- a/utilities.htm
+++ b/utilities.htm
@@ -25,6 +25,14 @@ Tested: Feb 8, 2020; Passed with no problems.
 		<h1>Utilities</h1></div>
 
 	<div role="main" class="ui-content">
+		<!-- #3 Week 5 Ordered List added -->
+		<ol data-role="listview" data-inset="true">
+			<li><a href="ameren.html"><img src="images/utilities-jpg/ameren.jpg" class="ui-li-icon">Ameren</a></li>
+			<li><a href="spire.html"><img src="images/utilities-jpg/spire.png" class="ui-li-icon">Spire Gas Company</a></li>
+			<li><a href="mo_amer_water.html"><img src="images/utilities-jpg/mo_amer_water.png" class="ui-li-icon">Missouri-American Water CO.</a></li>
+			<li><a href="ATT.html"><img src="images/utilities-jpg/ATT.jpg" class="ui-li-icon">AT&T</a></li>
+			<li><a href="msd.html"><img src="images/utilities-jpg/msd.jpg" class="ui-li-icon">MSD Sewer</a></li>
+			</ol>
 	</div>
 
 	<div data-role="footer" data-position="fixed" data-id="footernav" data-theme="a">
