--- a/utilities.htm
+++ b/utilities.htm
@@ -7,7 +7,7 @@ Use: Main page of the Moving Planner program
 Author: Amir Sinanovic
 School/Term: SIU Carbondale, Spring 2020
 Developed: Jan 23, 2020
-Tested: Feb 8, 2020; Passed with no problems.
+Tested: Feb 16, 2020; Passed with no problems.
 ******************************************************************************-->
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Utilities</title>
@@ -27,6 +27,7 @@ Tested: Feb 8, 2020; Passed with no problems.
 	<div role="main" class="ui-content">
 		<!-- #3 Week 5 Ordered List added -->
 		<ol data-role="listview" data-inset="true">
+			<!-- Week 5 using thumbnails and icons -->
 			<li><a href="ameren.html"><img src="images/utilities-jpg/ameren.jpg" class="ui-li-icon">Ameren</a></li>
 			<li><a href="spire.html"><img src="images/utilities-jpg/spire.png" class="ui-li-icon">Spire Gas Company</a></li>
 			<li><a href="mo_amer_water.html"><img src="images/utilities-jpg/mo_amer_water.png" class="ui-li-icon">Missouri-American Water CO.</a></li>
