--- a/utilities.htm
+++ b/utilities.htm
@@ -3,11 +3,11 @@
 <head>
 <!--*****************************************************************************
 Title: Plan-A-Move
-Use: Main page of the Moving Planner program 
+Use: Utilities page of the Moving Planner program 
 Author: Amir Sinanovic
 School/Term: SIU Carbondale, Spring 2020
 Developed: Jan 23, 2020
-Tested: Feb 16, 2020; Passed with no problems.
+Tested: Feb 24, 2020; Passed with no problems.
 ******************************************************************************-->
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Utilities</title>
@@ -28,7 +28,7 @@ Tested: Feb 16, 2020; Passed with no problems.
 		<!-- #3 Week 5 Ordered List added -->
 		<ol data-role="listview" data-inset="true">
 			<!-- Week 5 using thumbnails and icons -->
-			<li><a href="ameren.html"><img src="images/utilities-jpg/ameren.jpg" class="ui-li-icon">Ameren</a></li>
+			<li><a href="ameren.html"></a><img src="images/utilities-jpg/ameren.jpg" class="ui-li-icon">Ameren</a></li>
 			<li><a href="spire.html"><img src="images/utilities-jpg/spire.png" class="ui-li-icon">Spire Gas Company</a></li>
 			<li><a href="mo_amer_water.html"><img src="images/utilities-jpg/mo_amer_water.png" class="ui-li-icon">Missouri-American Water CO.</a></li>
 			<li><a href="ATT.html"><img src="images/utilities-jpg/ATT.jpg" class="ui-li-icon">AT&T</a></li>
@@ -40,7 +40,7 @@ Tested: Feb 16, 2020; Passed with no problems.
 		<div data-role="navbar">
 			<ul>
 				<li><a href="" rel="external" data-rel="back" data-icon="back" data-transition="slide" data-direction="reverse">Back</a></li>
-				<li><a href= rel="external""schedule.htm" data-icon="calendar" data-transition="slide">Schedule</a></li>
+				<li><a href="schedule.htm" rel="external" data-icon="calendar" data-transition="slide">Schedule</a></li>
 			</ul>
 		</div>
 	<h4>Amir's Moving Planner &copy; 2020</h4>
