--- a/utilities.htm
+++ b/utilities.htm
@@ -28,11 +28,11 @@ Tested: Feb 24, 2020; Passed with no problems.
 		<!-- #3 Week 5 Ordered List added -->
 		<ol data-role="listview" data-inset="true">
 			<!-- Week 5 using thumbnails and icons -->
-			<li><a href="ameren.html"><img src="images/utilities-jpg/ameren.jpg" class="ui-li-icon">Ameren</a></li>
-			<li><a href="spire.html"><img src="images/utilities-jpg/spire.png" class="ui-li-icon">Spire Gas Company</a></li>
-			<li><a href="mo_amer_water.html"><img src="images/utilities-jpg/mo_amer_water.png" class="ui-li-icon">Missouri-American Water CO.</a></li>
-			<li><a href="ATT.html"><img src="images/utilities-jpg/ATT.jpg" class="ui-li-icon">AT&T</a></li>
-			<li><a href="msd.html"><img src="images/utilities-jpg/msd.jpg" class="ui-li-icon">MSD Sewer</a></li>
+			<li><a href="https://www.ameren.com" target="_blank"><img src="images/utilities-jpg/ameren.jpg" class="ui-li-icon">Ameren</a></li>
+			<li><a href="https://www.spireenergy.com/" target="_blank"><img src="images/utilities-jpg/spire.png" class="ui-li-icon">Spire Gas Company</a></li>
+			<li><a href="https://amwater.com/moaw/" target="_blank"><img src="images/utilities-jpg/mo_amer_water.png" class="ui-li-icon">Missouri-American Water CO.</a></li>
+			<li><a href="https://www.att.com/" target="_blank"><img src="images/utilities-jpg/ATT.jpg" class="ui-li-icon">AT&T</a></li>
+			<li><a href="https://www.stlmsd.com/" target="_blank"><img src="images/utilities-jpg/msd.jpg" class="ui-li-icon">MSD Sewer</a></li>
 			</ol>
 	</div>
 
